--- a/styles/small.css
+++ b/styles/small.css
@@ -1,16 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Marcellus&family=Merienda:wght@700&display=swap');
 
 body{
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 20%;
+    margin-right: 20%;
     margin-top: 2%;
     margin-bottom: 10%;
     font-family: Marcellus;
-    font-size: 19px;
+    font-size: 1.2rem;
 }
 
 h1, h2 {
     font-family: Merienda;
+    font-size: 1.5rem;
+    padding: 10px;
 }
 
 header {
@@ -21,13 +23,19 @@ header {
     box-shadow: 10px 5px 10px black;
     padding: 10px;
     gap: 20px;
+    margin-bottom: -3%;  
+}
+
+img {
+    width: 90px;
+    height: 120px;
 }
 
 main{
     display: grid;
     justify-content: center;
-    
 }
+
 .line {
     width: 100%;
     border-top: 1px solid #000000;
@@ -43,9 +51,12 @@ footer{
     background-color: #009FF5;
     border-radius: 10px;
     box-shadow: 10px 5px 10px black;
-    
+    font-size: 1rem;
+    text-align: center;
 }
 
 .lastModif {
     color: yellow;
+    margin-top: -10px;
+    font-size: 0.8rem;
 }
