--- a/lesson3/styles/medium.css
+++ b/lesson3/styles/medium.css
@@ -3,8 +3,9 @@
         font-size: 1.2rem;
     }
     nav {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
     }
     
 }
