--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -1,7 +1,12 @@
 @media only screen and (min-width: 1200px){
 
+   
     nav ul li a {
         padding: .5rem 1rem;
     }
 
+}
+
+.menu {
+    font-size: 2rem;
 }
