--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 800px){
 
+  
     nav button {
         display: none;
     }
@@ -12,4 +13,21 @@
     nav ul li a {
         border: none;
     }
+    
+    .footer1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .footer2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .line {
+        display: none;
+    }
+
 }
