--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -5,8 +5,70 @@
         padding: .5rem 1rem;
     }
 
-}
+    /*Main*/
+    main {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        margin: 5%;
+        font-size: 10px;
+        gap: 10px;
+    }
 
-.menu {
-    font-size: 2rem;
+    #hero {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #weather {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #news {
+        grid-column: 2/4;
+        grid-row: 3/4;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #event {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #join {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    .spotlight {
+        grid-column: 4/5;
+        grid-row: 1/5;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    .sportlight1 {
+        border-color: black;
+    }
+
+    .sportlight2 {
+        border-color: red;
+    }
+
 }
