--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -29,5 +29,74 @@
     .line {
         display: none;
     }
+    
+    /*Main*/
+    main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        margin: 5%;
+        font-size: 10px;
+        gap: 10px;
+    }
+
+    #hero {
+        grid-column: 1/4;
+        grid-row: 1/2;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #weather {
+        grid-row: 5/6;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #news {
+        grid-column: 1/4;
+        grid-row: 2/3;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #event {
+        grid-column: 1/3;
+        grid-row: 5/6;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    #join {
+        grid-column: 1/4;
+        grid-row: 4/5;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    .spotlight {
+        grid-column: 1/4;
+        grid-row: 3/4;
+        background-color: silver;
+        border: black;
+        padding: 15%;
+    }
+
+    .sportlight1 {
+        border-color: black;
+    }
+
+    .sportlight2 {
+        border-color: red;
+    }
+
+    .spotlight3 {
+        display: none;
+    }
 
 }
