--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 800px){
 
-  
+    /*Header*/
     nav button {
         display: none;
     }
@@ -12,6 +12,7 @@
 
     nav ul li a {
         border: none;
+        font-size: 25px;
     }
     
     .footer1 {
@@ -29,6 +30,8 @@
     .line {
         display: none;
     }
+
+
     
     /*Main*/
     main {
