--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -12,6 +12,7 @@ header {
     flex-direction: column;
     background-color: #16DB65;
     padding: 10px 0;
+    box-shadow: 10px 5px 10px black;
 }
 
 header img {
@@ -104,6 +105,7 @@ main {
     margin: 5%;
     font-size: 10px;
     gap: 10px;
+    background-color: whitesmoke;
 }
 
 #hero {
@@ -135,17 +137,21 @@ main {
 }
 
 .spotlight {
+    position: relative;
     background-color: silver;
     border: black;
     padding: 15%;
 }
 
 .sportlight1 {
-    border-color: black;
+    position: relative;
+    border: 1px black;
+    width: 20%;
+    height: 20%;
 }
 
 .sportlight2 {
-    border-color: red;
+    border: 1px  black;
 }
 
 .spotlight3 {
@@ -158,6 +164,7 @@ footer {
     flex-direction: column;
     background-color: #16DB65;
     text-align: center;
+    box-shadow: 10px 5px 10px black;
 }
 
 .logof{
