--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -1,9 +1,27 @@
 @media only screen and (min-width: 1200px){
 
-   
+    nav button {
+        display: none;
+    }
+
+    nav ul#primaryNav {
+        display: flex;
+        margin-left: 2vw;
+    }
+
+    nav ul li a {
+        border: none;
+        font-size: 25px;
+    }
+
     nav ul li a {
         padding: .5rem 1rem;
         font-size: 30px;
+    }
+
+    #social {
+        order: 1;
+        padding: 20px;
     }
 
     /*Main*/
@@ -20,7 +38,7 @@
         grid-column: 2/4;
         grid-row: 1/3;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -28,7 +46,7 @@
         grid-column: 1/2;
         grid-row: 2/3;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -36,7 +54,7 @@
         grid-column: 2/4;
         grid-row: 3/4;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -44,7 +62,7 @@
         grid-column: 1/2;
         grid-row: 1/2;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -52,28 +70,40 @@
         grid-column: 1/2;
         grid-row: 3/4;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
     .spotlight {
+        display: flex;
+        flex-direction: column;
         grid-column: 4/5;
         grid-row: 1/5;
         background-color: silver;
-        border: black;
-        padding: 15%;
+        gap: 5px;
+        
     }
 
-    .sportlight1 {
-        border-color: black;
+    #sport1 {
+        background-color: silver;
+        border: 1px solid black;
+        height: 170px;
+        text-align: center;
     }
 
-    .sportlight2 {
-        border-color: red;
+    #sport2 {
+        background-color: silver;
+        border: 1px solid black;
+        height: 170px;
+        text-align: center;
     }
 
     .spotlight3 {
         display: block;
+        background-color: silver;
+        border: 1px solid black;
+        height: 33%;
+        text-align: center;
     }
 
     #ftext {
