--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -1,20 +1,7 @@
 @media only screen and (min-width: 800px){
 
     /*Header*/
-    nav button {
-        display: none;
-    }
-
-    nav ul#primaryNav {
-        display: flex;
-        margin-left: 2vw;
-    }
-
-    nav ul li a {
-        border: none;
-        font-size: 25px;
-    }
-    
+       
     .footer1 {
         display: flex;
         flex-direction: row;
@@ -31,8 +18,6 @@
         display: none;
     }
 
-
-    
     /*Main*/
     main {
         display: grid;
@@ -47,14 +32,14 @@
         grid-column: 1/4;
         grid-row: 1/2;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
     #weather {
         grid-row: 5/6;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -62,7 +47,7 @@
         grid-column: 1/4;
         grid-row: 2/3;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -70,7 +55,7 @@
         grid-column: 1/3;
         grid-row: 5/6;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
@@ -79,24 +64,25 @@
         grid-column: 1/4;
         grid-row: 4/5;
         background-color: silver;
-        border: black;
+        border: 1px solid black;
         padding: 15%;
     }
 
     .spotlight {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
         grid-column: 1/4;
         grid-row: 3/4;
         background-color: silver;
-        border: black;
-        padding: 15%;
+        gap: 5px;
     }
 
     .sportlight1 {
-        border-color: black;
+        grid-column: 1/2;
     }
 
     .sportlight2 {
-        border-color: red;
+        grid-column: 2/3;
     }
 
     .spotlight3 {
