--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -115,10 +115,41 @@ main {
 }
 
 #hero {
-    background-color: silver;
-    border: 1px solid black;;
-    padding: 15%;
+    position: relative;
+    border: 1px solid black;
+    height: auto;
+    
 }
+
+#imgcordero {
+    max-inline-size: 100%;
+    block-size: auto;
+    object-fit: cover;
+    object-position: top center;
+}
+
+#welcome {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    color: white;
+    text-shadow: .25rem .25rem .75rem black;
+    font-size: 15px;
+}
+
+#herobutton {
+    position: absolute;
+    right: 20%;
+    bottom: 25%;
+    padding: 1rem;
+    border-radius: 10px;
+    font-size: 15px;
+    box-shadow: 10px 5px 10px #04471C;
+    background-color: #16DB65;
+    font-weight: 800;
+
+}
+
 
 #weather {
     background-color: silver;
@@ -135,7 +166,7 @@ main {
 #event {
     background-color: silver;
     border: 1px solid black;
-    padding: 15%;
+    height: 200px;
 }
 
 #join {
