--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 1200px){
 
+    /*Header*/
     nav button {
         display: none;
     }
@@ -39,7 +40,7 @@
         grid-row: 1/3;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
+        height: auto;
     }
 
     #weather {
