--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -1,23 +1,5 @@
 @media only screen and (min-width: 800px){
 
-    /*Header*/
-       
-    .footer1 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    .footer2 {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-    }
-
-    .line {
-        display: none;
-    }
-
     /*Main*/
     main {
         display: grid;
@@ -33,7 +15,14 @@
         grid-row: 1/2;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
+    }
+
+    #welcome {
+        font-size: 20px;
+    }
+    #herobutton {
+        padding: 1.5rem;
+        font-size: 20px;
     }
 
     #weather {
@@ -91,5 +80,23 @@
 
     #ftext {
         font-size: 20px;
+    }
+
+    
+    /*Footer*/       
+    .footer1 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .footer2 {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .line {
+        display: none;
     }
 }
