--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -29,7 +29,6 @@
         grid-row: 5/6;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
     }
 
     #news {
@@ -45,7 +44,7 @@
         grid-row: 5/6;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
+        height: auto;
     }
 
     #join {
