--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -104,6 +104,10 @@ nav ul.open {
     gap: 5px;
 }
 
+a:hover {
+    background-color: #def4c6;
+    border-radius: 10px;
+}
 /*Main*/
 main {
     display: grid;
@@ -150,11 +154,28 @@ main {
 
 }
 
-
 #weather {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: silver;
-    border: 1px solid black;;
-    padding: 15%;
+    border: 1px solid black;
+    height: auto;
+}
+
+#img-weather{
+    max-inline-size: 60%;
+    block-size: auto;
+    object-position: left;
+    margin-right: 10%;
+}
+
+#temperature {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+
 }
 
 #news {
@@ -164,9 +185,12 @@ main {
 }
 
 #event {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
     background-color: silver;
     border: 1px solid black;
-    height: 200px;
+    height: auto
 }
 
 #join {
@@ -221,10 +245,22 @@ footer {
 #map {
     text-decoration: none;
     color: black;
+    padding: 5px;
 }
 
 #ftext {
+    display: flex;
+    flex-direction: column;
     font-size: 20px;
+    gap: 20px;
+    margin: 10px;
+    width: auto;
+}
+
+.footer-a {
+    text-decoration: none;
+    padding: 5px;
+    color: black;
 }
 
 .line {
