--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -88,7 +88,7 @@
     #sport1 {
         background-color: silver;
         border: 1px solid black;
-        height: 170px;
+        height: auto;
         text-align: center;
     }
 
