--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -25,13 +25,17 @@
         padding: 20px;
     }
 
+    #cordero-title {
+        font-size: 40px;
+    }
+
     /*Main*/
     main {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(3, 1fr);
         margin: 5%;
-        font-size: 10px;
+        font-size: 12px;
         gap: 10px;
     }
 
@@ -48,6 +52,7 @@
         grid-row: 2/3;
         background-color: silver;
         border: 1px solid black;
+        height: auto;
     }
 
     #news {
@@ -64,7 +69,8 @@
         grid-row: 1/2;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
+        height: auto;
+        padding: 5%;
     }
 
     #join {
@@ -72,7 +78,7 @@
         grid-row: 3/4;
         background-color: silver;
         border: 1px solid black;
-        padding: 15%;
+        padding: 5%;
     }
 
     .spotlight {
@@ -82,6 +88,7 @@
         grid-row: 1/5;
         background-color: silver;
         gap: 5px;
+        height: auto;
         
     }
 
@@ -95,16 +102,23 @@
     #sport2 {
         background-color: silver;
         border: 1px solid black;
-        height: 170px;
+        height: auto;
         text-align: center;
     }
 
     .spotlight3 {
-        display: block;
+        display: flex;
+        flex-direction: column;
         background-color: silver;
         border: 1px solid black;
-        height: 33%;
+        align-items: center;
         text-align: center;
+        justify-content: center;
+        align-content: center;
+    }
+    
+    a {
+        padding: 5px;
     }
 
     #ftext {
