--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -44,7 +44,11 @@
         grid-row: 1/3;
         background-color: silver;
         border: 1px solid black;
-        height: auto;
+        height: auto; 
+    }
+
+    #imgcordero {
+        aspect-ratio: 0.63;
     }
 
     #weather {
