--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -133,10 +133,10 @@ main {
     border-radius: 0;
 }
 
-#imgcordero {
+#imgcordero, picture {
     max-inline-size: 100%;
     block-size: auto;
-    object-fit: cover;
+    object-fit: contain;
     object-position: top center;
 }
 
@@ -168,6 +168,10 @@ main {
     background-color: silver;
     border: 1px solid black;
     height: auto;
+}
+
+.gradesf {
+    font-size: 2.5rem;
 }
 
 #img-weather{
