--- a/lesson7/styles/lazyload.css
+++ b/lesson7/styles/lazyload.css
@@ -11,3 +11,12 @@ body {
     border: 1px solid black;
     margin: 7%;
 }
+
+img[data-src] {
+    filter: blur(0.4em);
+}
+  
+img {
+    filter: blur(0em);
+    transition: filter 1s;
+}
