--- a/lesson8/styles/tablebuild.css
+++ b/lesson8/styles/tablebuild.css
@@ -27,6 +27,11 @@ th, td {
     font-size: 2rem;
 }
 
+#cell {
+    background-color: black;
+    color: black;
+}
+
 .not {
     color: red;
     font-weight: 1000;
