--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -137,6 +137,7 @@ main {
     font-size: 10px;
     gap: 10px;
     background-color: whitesmoke;
+    
 }
 
 #hero {
@@ -280,22 +281,27 @@ main {
 /*Discover Main*/
 
 #discover-body{    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #16DB65;
-    word-wrap: break-word;
+    display: inline-block;
+    text-align: center;
+    width: 450px;
+    
 }
 .disc-section{
     display: block;
-    width: 100%;
-    background-color: aqua;
-    margin: 20px auto;
+    width: inherit;
     text-align: center;
+    margin: 20px;
+    box-shadow: 10px 5px 10px black;
+    
+    
 }
 
 .disc-section p {
+    text-align: center;
     padding: 2rem;
+    width: inherit;
+    text-align: justify;
+    
 }
 
 .disc-section h3 {
@@ -309,8 +315,7 @@ main {
 .disc-imgs {
     filter: blur(0em);
     transition: filter 1s;
-    max-width: 100%;
-    object-fit: cover;
+    margin-top: 10px;
 }
 
 
