--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -136,8 +136,7 @@ main {
     margin: 5%;
     font-size: 10px;
     gap: 10px;
-    background-color: whitesmoke;
-    
+    background-color: white;
 }
 
 #hero {
@@ -281,31 +280,29 @@ main {
 /*Discover Main*/
 
 #discover-body{    
-    display: inline-block;
     text-align: center;
-    width: 450px;
-    
+    width: 435px;
 }
+
 .disc-section{
-    display: block;
     width: inherit;
     text-align: center;
-    margin: 20px;
+    margin-top: 25px;
+    margin-left: -5px;
+    margin-bottom: 25px;
     box-shadow: 10px 5px 10px black;
-    
-    
 }
 
 .disc-section p {
     text-align: center;
-    padding: 2rem;
     width: inherit;
     text-align: justify;
-    
+    padding: 10px;
+    margin: 10px;
 }
 
 .disc-section h3 {
-    padding: 2rem;
+    padding: 1rem;
 }
 
 .disc-imgs[data-src] {
@@ -315,7 +312,7 @@ main {
 .disc-imgs {
     filter: blur(0em);
     transition: filter 1s;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 
 
