--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -130,4 +130,23 @@
     #ftext {
         font-size: 22px;
     }
+
+    /*Main Discover*/    
+    .disc-section{
+        margin-left: 35%;
+        padding-left: 50px;
+        width: 1100px;
+    }  
+    
+    .disc-imgs {
+        margin: 25px;        
+    }
+
+    .disc-section p {
+        font-size: 26px;
+    }
+    
+    .disc-section h3 {
+        font-size: 33px;
+    }
 }
