--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -129,6 +129,12 @@ a:hover {
     box-shadow: 10px 5px 10px #04471C;
 }
 
+#last-visit {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+}
+
 /*Main*/
 main {
     display: grid;
