--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -321,6 +321,149 @@ main {
     margin-top: 15px;
 }
 
+/* ------- JOIN ------- */
+#jointitle {
+    grid-column: 1/5;
+    text-align: center;
+    margin-bottom: 0;
+    background-color: #04471C;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+form {
+    grid-column: 1/4;
+    margin-top: 0;
+}
+
+form fieldset {
+    margin: 3rem 0;
+    border: 1px solid #04471C;
+    border-radius: 10px;
+    padding: 1rem 2%;
+}
+
+form legend {
+    color: #04471C;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+    font-size: 20px;
+}
+
+form label.top, form div {
+    display: block;
+    padding-top: 1rem;
+    color: black;
+    font-size: 20px;
+}
+
+form label.top input, form label.top select {
+    display: block;
+    font-size: 1rem;
+    border: solid 1px silver;
+    border-radius: 4px;
+    padding: 0.75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 22px;
+}
+
+form label.sbs {
+    display: block;
+    padding: .75rem 0;
+    color: #555;
+    font-size: 20px;
+}
+
+form label.description {
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    margin-top: 10px;
+    max-width: 20rem;
+}
+
+form input.submitBtn {
+    border: none;
+    background-color: #04471C;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+    font-size: 24px;
+    box-shadow: 10px 5px 10px black;
+}
+
+form input.submitBtn:hover {
+    background-color: #def4c6;
+    color: black;
+}
+
+form label.top input:required {
+    border-left: red solid 6px;
+}
+
+form label.top input:required:valid {
+    border-left: green solid 6px;
+}
+
+/* ------- TABLE ------ */
+table {
+    grid-column: 1/4;
+    border-collapse: collapse;
+    border: 2px solid silver;
+    font-size: 1.5rem;
+    margin: 0 auto;
+    box-shadow: 10px 5px 10px black;
+    height: 150px;    
+
+}
+
+caption {
+    background-color: #04471C;
+    color: white;
+    padding: 20px;
+    font-size: 33px;
+}
+
+th, td {
+    border: 1px solid silver;
+    padding: 10px 20px ;
+    text-align: center;
+}
+
+#headt {
+    border-top: solid #04471C;
+    border-left: solid #04471C;
+    background-color: #444;
+    color: white;
+    font-size: 24px;
+    height: 100px;
+}
+
+#cell {
+    background-color: #04471C;
+    color: #04471C;
+}
+
+.not {
+    color: red;
+    font-weight: 1000;
+}
+
+.yes {
+    color: green;
+    font-weight: 1000;
+}
+
+tr:nth-child(odd) td {
+    background-color: rgb(240,240,240);
+}
 
 
 /*Footer*/
