--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -149,4 +149,16 @@
     .disc-section h3 {
         font-size: 33px;
     }
+    
+    /* ------- JOIN ------- */
+    #jointitle {
+        grid-column: 2/5;
+        margin-left: 12%;
+        max-width: fit-content;
+        max-height: 30px;
+    }
+
+    form {
+        margin-left: 30%;
+    }
 }
