--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -483,7 +483,6 @@ tr:nth-child(odd) td {
 /* ------- DIRECTORY -------*/
 #space {
     grid-column: 1/5;
-    border: 1px dashed black;
     background-color: silver;
     margin: 0 auto;
     padding: 0.7rem;
@@ -542,10 +541,10 @@ tr:nth-child(odd) td {
 }
 
 .list section {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
+	text-align: left;
 	margin: 0;
-	padding: 0.25rem;
+	padding: 1rem;
+    border: 1px dotted black;
 }
 
 .list section > * {
