--- a/lesson9/styles/prophets.css
+++ b/lesson9/styles/prophets.css
@@ -1,12 +1,15 @@
 body {
     background-color: deepskyblue;
     margin: 2%;
+    min-width: 400px;
 }
 
 .cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 3fr));
-    gap: 70px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    min-width: 400px;
     
 }
 
@@ -16,6 +19,7 @@ body {
     align-items: center;
     border: 7px outset skyblue;
     background-color: deepskyblue;
+    min-width: 400px;
 }
 
 .cards li {
@@ -27,9 +31,10 @@ body {
     box-shadow: 10px 5px 10px black;
     padding: 15px;
     margin-top: 15px;
+    margin-bottom: 15px;
     background-color: aliceblue;
-    width: 60%;
-    height: 60%;
+    width: 300px;
+    height: auto;
 }
 
 h1 {
