--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -204,18 +204,24 @@ main {
     font-size: 2.5rem;
 }
 
-#img-weather{
-    max-inline-size: 60%;
-    object-position: left;
-    margin-right: 10%;
-}
-
 #temperature {
     display: flex;
     flex-direction: row;
     align-items: center;
     align-content: center;
+    margin: 20px;
+    gap: 10px;
+}
 
+#whr {
+    border: 1px solid #04471C;
+    width: 90%;
+    margin: 20px;
+}
+
+h5 {
+    font-size: 1rem;
+    margin: 10px;
 }
 
 #news {
@@ -407,6 +413,7 @@ form input.submitBtn {
 form input.submitBtn:hover {
     background-color: #def4c6;
     color: black;
+    box-shadow: 17px 9px 17px black;
 }
 
 form label.top input:required {
