--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -573,6 +573,11 @@ tr:nth-child(odd) td {
 	background-color: #999;
 }
 
+#contspace {
+    display: flex;
+    flex-direction: column;
+}
+
 /*Footer*/
 footer {
     display: flex;
