--- a/lesson4/styles/medium.css
+++ b/lesson4/styles/medium.css
@@ -64,7 +64,7 @@
         height: auto;
     }
 
-    .button {        
+    .buttonj {        
         padding: 1rem;
         border-radius: 10px;
         font-size: 25px;
