--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -578,6 +578,9 @@ tr:nth-child(odd) td {
     flex-direction: column;
 }
 
+/* ------- CONTACT ------- */
+
+
 /*Footer*/
 footer {
     display: flex;
