--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -362,7 +362,21 @@ form fieldset {
     padding: 1rem 2%;
 }
 
+#contactfieldser {
+    margin: 3rem 0;
+    border: 1px solid #04471C;
+    border-radius: 10px;
+    padding: 1rem 2%;
+}
+
 form legend {
+    color: #04471C;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+    font-size: 20px;
+}
+
+#contactlegend {
     color: #04471C;
     margin: 0 1rem;
     padding: 0 .5rem;
@@ -400,7 +414,7 @@ form label.description {
     display: flex;
     flex-direction: column;
     font-size: 20px;
-    margin-top: 10px;
+    margin: 20px 0;
     max-width: 20rem;
 }
 
@@ -580,6 +594,19 @@ tr:nth-child(odd) td {
 
 /* ------- CONTACT ------- */
 
+.contactsect {
+    background-color: silver;
+    border: 1px solid black ;
+    padding: 20px;
+    text-align: center;
+    margin: 10px;
+    box-shadow: 0 0 10px #333;
+}
+
+#imgmap {
+    width: 400px;
+    height: 300px;
+}
 
 /*Footer*/
 footer {
