--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -167,7 +167,9 @@ main {
     left: 5%;
     color: white;
     text-shadow: .25rem .25rem .75rem black;
-    font-size: 60px;
+    font-size: 50px;
+    background-image: radial-gradient(#04471C 50%, #0c682c, transparent);
+    padding: 0px 20px;
 }
 
 #herobutton {
