--- a/lesson4/styles/large.css
+++ b/lesson4/styles/large.css
@@ -155,6 +155,10 @@
     }
 
     /* directory */
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    } 
     #space {
         margin-bottom: -600px;
     }
