--- a/lesson4/styles/base.css
+++ b/lesson4/styles/base.css
@@ -165,9 +165,7 @@ main {
     position: absolute;
     top: 5%;
     left: 5%;
-    color: white;
-    font-size: 50px;
-    background-image: radial-gradient(#04471C 50%, #0c682c, transparent);
+    background-color: whitesmoke;
     padding: 0px 20px;
 }
 
