--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 1200px){
 
+    /* ------- HEADER ------- */
     #second {
         margin-top: -50px;
     }
@@ -21,6 +22,16 @@
     }
     nav ul li a {
         font-size: 30px;
+    }
+
+    /* ------- FOOTER ------- */
+    
+    footer p {
+        font-size: 20px;
+    }
+    
+    #logo-footer {
+        width: 60px;
     }
 
 }
