--- a/bountiful-foods/styles/medium.css
+++ b/bountiful-foods/styles/medium.css
@@ -1,5 +1,6 @@
 @media only screen and (min-width: 800px){
 
+    /* ------- HEADER ------- */
     nav button {
         display: none;
     }
@@ -18,6 +19,26 @@
 
     #social-media img {
         width: 58px;
+    }
+
+    /* ------- FOOTER ------- */
+    footer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+    }
+    
+    footer div {
+        margin: 10px;
+    }
+    
+    footer p {
+        font-size: 18px;
+    }
+    
+    #logo-footer {
+        width: 55px;
     }
 
 }
