--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -24,6 +24,13 @@
         font-size: 30px;
     }
 
+    /* ------- HOME ------- */
+
+    #main-space {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
     /* ------- FOOTER ------- */
     
     footer p {
