--- a/bountiful-foods/styles/base.css
+++ b/bountiful-foods/styles/base.css
@@ -136,10 +136,10 @@ nav ul.open {
 }
 
 #weather-box {
-    background-image: url("/bountiful-foods/images/sunset1.jpg");
+    background-image: url("https://yuriro21.github.io/wdd230/bountiful-foods/images/sunset1.jpg");
     background-size: cover;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 20px;
     text-shadow: white 0.1em 0.1em 1em;
     color: black;
@@ -169,11 +169,65 @@ nav ul.open {
     padding: 10px;
 }
 
-.day {
+
+/* ------- FRESH -------*/
+#all-fresh {
+    justify-content: center;
+    padding: 100px 5px;
+    background-image: url(/bountiful-foods/images/fruits.jpg);
+    background-size: cover;
+    box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.3);
 
 }
 
+#from-box {
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 350px;
+    padding: 10px;
+    box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.3);
+    background-color: #f8f9fa;
+}
 
+#freshTitle {
+    text-align: center;
+    color: #008000;
+    margin-bottom: -20px;
+}
+
+form fieldset {
+    margin: 3rem 0;
+    border: 1px solid #008000;
+    padding: 1rem 2%;
+}
+
+form legend {
+    color: #008000;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+    font-size: 18px;
+}
+
+form label.labelf, form div {
+    display: block;
+    padding-top: 1rem;
+    color: black;
+}
+
+form label.labelf input, form label.labelf select {
+    display: block;
+    font-size: 1rem;
+    border: solid 1px silver;
+    border-radius: 4px;
+    padding: 0.75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 22px;
+}
 
 /* ------- FOOTER ------- */
 
