--- a/bountiful-foods/styles/base.css
+++ b/bountiful-foods/styles/base.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 body {
     font-family: 'Arvo', serif;
+    background-color: #f8f9fa;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -122,7 +124,7 @@ nav ul.open {
     object-fit: contain;
 }
 
-#beach-text {
+.img-text {
     padding: 5px 20px;
     text-align: center;
 }
@@ -168,6 +170,27 @@ nav ul.open {
     gap: 20px;
     padding: 10px;
 }
+
+#button-drink {
+    width: 150px;
+    margin-left: 70px;
+    padding-bottom: 25px;
+}
+
+#button-drink:hover {
+    width: 170px;
+    margin-left: 60px;    
+}
+
+.box-drinks {
+    margin: 0 auto;
+}
+
+.drinks {
+    box-shadow: 0px 2px 18px 0px rgba(0,0,0,0.3);
+    border-radius: 10px;
+}
+
 
 
 /* ------- FRESH -------*/
@@ -227,6 +250,26 @@ form label.labelf input, form label.labelf select {
     max-width: 20rem;
     background-color: rgba(0, 0, 0, 0.1);
     font-size: 22px;
+}
+
+form input.submitBtn {
+    border: none;
+    background-color: #008000;
+    color: #f8f9fa;
+    border-radius: 10px;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 90%;
+    max-width: 20rem;
+    font-size: 24px;
+    box-shadow: 10px 5px 10px black;
+}
+
+form input.submitBtn:hover {
+    background-color: #ff7d00;
+    color: #f8f9fa;
+    box-shadow: 17px 9px 17px black;
+    width: 100%;
 }
 
 /* ------- About US ------- */
