--- a/bountiful-foods/styles/large.css
+++ b/bountiful-foods/styles/large.css
@@ -31,6 +31,10 @@
         grid-template-columns: 1fr 1fr 1fr;
     }
 
+    .drinks {
+        margin-top: 60px;
+    }
+
     /* ------- FOOTER ------- */
     
     footer p {
